--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -72,6 +72,8 @@ const canonicalUrl = siteUtils.getCanonicalUrl(Astro.url.pathname);
   </head>
   <body class="relative bg-base-50 z-[0]" data-cy="app-body">
     
+    <div class="grid-background" data-cy="grid-background"></div>
+
     <!-- Container de fond avec couleur base-300 -->
     <div class="content-background" data-cy="content-background"></div>
     
@@ -100,7 +102,7 @@ const canonicalUrl = siteUtils.getCanonicalUrl(Astro.url.pathname);
     box-sizing: border-box;
     
     /* Couleur de fond base-300 pour un contraste plus prononcé */
-    background-color: var(--color-base-100);
+    background-color: var(--color-base-200);
   }
 
   /* Adaptation pour les petits écrans */
